# JingHealth

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: axum_server.rs  lib.rs  main.rs  snowflake.rs
src-tauri/src/entities/: medical_records.rs  mod.rs  patient.rs
src-tauri/src/handlers/: medical_record_handler.rs  mod.rs
src-tauri/src/services/: mod.rs  patient_dedup.rs
src/components/: AppLayout.vue  Icon.vue  ThemeToggle.vue
src/services/: api.ts
src/views/: MedicalRecordCreate.vue  PatientCardView.vue  PatientDetail.vue  PatientList.vue  PatientRegistration.vue
